--- a/config/default/language/alg/system.site.yml
+++ b/config/default/language/alg/system.site.yml
@@ -1,2 +1,2 @@
 slogan: 'Mankaᐧpeϴkesiwa menominee netoppew'
-name: 'Mankaᐧpeϴkesiwa menominee netoppew'
+name: 'Gichi Zaaga’iganan Mamow Andogikenjigewi Anokiiwin'
