added cayuga language

--- a/config/default/language/iro/system.site.yml
+++ b/config/default/language/iro/system.site.yml
@@ -1,2 +1,2 @@
-slogan: 'Mishigami ratitsénhaiens kerhite'
-name: 'Mishigami ratitsénhaiens kerhite'
+slogan: 'Ganyadowa:nęhsǫ’ Gae:hwaohe:s hne:’ Ǫdewayę:sta’ Ǫgwehǫwékha’'
+name: 'Ganyadowa:nęhsǫ’ Gae:hwaohe:s hne:’ Ǫdewayę:sta’'
