--- a/config/default/language/fr/views.view.block_content.yml
+++ b/config/default/language/fr/views.view.block_content.yml
@@ -2,7 +2,7 @@ label: 'Bibliothèque de blocs personnalisés'
 description: 'Trouver et gérer les blocs personnalisés.'
 display:
   default:
-    display_title: 'Par défaut'
+    display_title: Maître
     display_options:
       title: 'Bibliothèque de blocs personnalisés'
       fields:
@@ -19,8 +19,8 @@ display:
       pager:
         options:
           tags:
-            next: 'Suivant ›'
-            previous: '‹ Précédent'
+            next: 'Next ›'
+            previous: '‹ Previous'
           expose:
             items_per_page_label: 'Éléments par page'
             items_per_page_options_all_label: '- Tout -'
