--- a/config/default/language/fr/views.view.frontpage.yml
+++ b/config/default/language/fr/views.view.frontpage.yml
@@ -22,10 +22,10 @@ display:
             items_per_page_options_all_label: '- Tout -'
             offset_label: Décalage
           tags:
-            previous: '‹ Précédent'
-            next: 'Suivant ›'
-            first: '« Premier'
-            last: 'Dernier »'
+            previous: '‹ Previous'
+            next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
     display_title: Maître
   feed_1:
     display_title: Flux
