--- a/config/default/language/fr/views.view.glossary.yml
+++ b/config/default/language/fr/views.view.glossary.yml
@@ -2,13 +2,13 @@ label: Glossary
 description: 'Tous les contenus, triés par lettre.'
 display:
   default:
-    display_title: 'Par défaut'
+    display_title: Maître
     display_options:
       fields:
         title:
           label: Titre
         name:
-          label: Auteur
+          label: Auteurs
         changed:
           label: 'Dernière mise à jour'
       pager:
