--- a/config/default/language/fr/views.view.moderated_content.yml
+++ b/config/default/language/fr/views.view.moderated_content.yml
@@ -4,19 +4,7 @@ display:
   default:
     display_title: Maître
     display_options:
-      exposed_form:
-        options:
-          submit_button: Filtrer
-          reset_button_label: Réinitialiser
-          exposed_sorts_label: 'Trier par'
-          sort_asc_label: Asc
-          sort_desc_label: Desc
-      pager:
-        options:
-          expose:
-            items_per_page_label: 'Éléments par page'
-            items_per_page_options_all_label: '- Tout -'
-            offset_label: Décalage
+      title: 'Contenu modéré'
       fields:
         title:
           label: Titre
@@ -35,6 +23,27 @@ display:
           separator: ', '
         operations:
           label: Actions
+      pager:
+        options:
+          tags:
+            next: 'Next ›'
+            previous: '‹ Previous'
+            first: '« First'
+            last: 'Last »'
+          expose:
+            items_per_page_label: 'Éléments par page'
+            items_per_page_options_all_label: '- Tout -'
+            offset_label: Décalage
+      exposed_form:
+        options:
+          submit_button: Filtrer
+          reset_button_label: Réinitialiser
+          exposed_sorts_label: 'Trier par'
+          sort_asc_label: Asc
+          sort_desc_label: Desc
+      empty:
+        area_text_custom:
+          content: 'Aucun contenu modéré disponible. Seules les versions de contenu en attente, telles que ''Brouillon'', sont listées ici.'
       filters:
         title:
           expose:
@@ -48,9 +57,5 @@ display:
         langcode:
           expose:
             label: Langue
-      title: 'Contenu modéré'
-      empty:
-        area_text_custom:
-          content: 'Aucun contenu modéré disponible. Seules les versions de contenu en attente, telles que ''Brouillon'', sont listées ici.'
   moderated_content:
     display_title: 'Contenu modéré'
