--- a/config/default/language/fr/views.view.watchdog.yml
+++ b/config/default/language/fr/views.view.watchdog.yml
@@ -2,7 +2,7 @@ label: Watchdog
 description: 'Entrées récentes du journal'
 display:
   default:
-    display_title: 'Par défaut'
+    display_title: Maître
     display_options:
       title: 'Entrées récentes du journal'
       fields:
